--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,8 @@
       <div class="inner">
 
         <header>
+          <h1>Test page.title {{ page.title }}</h1>
+          <h1>Test site.title {{ site.title }}</h1>
           <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
           <h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
         </header>
