--- a/assets/css/print.scss
+++ b/assets/css/print.scss
@@ -1,3 +1,6 @@
+---
+---
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -186,15 +189,15 @@ blockquote {
 }
 
 ul li {
+  padding-left: 20px;
   list-style-position: inside;
   list-style: disc;
-  padding-left: 20px;
 }
 
 ol li {
+  padding-left: 3px;
   list-style-position: inside;
   list-style: decimal;
-  padding-left: 3px;
 }
 
 dl dd {
