--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,46 +1,50 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: 'en-US' }}">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    {% seo %}
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1><a href="{{ '/' | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
-        
-        {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
-        {% endif %}
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        {% seo %}
+    </head>
+    <body>
+        <div class="wrapper">
+            <header>
+                <h1><a href="{{ '/' | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
+                {% if site.logo %}
+                  <img src="{{site.logo | relative_url}}" alt="Logo" />
+                {% endif %}
+                <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-        {% endif %}
+                {% if site.github.is_project_page %}
+                    <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
+                {% endif %}
 
-        {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
+                {% if site.github.is_user_page %}
+                    <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+                {% endif %}
 
-        {% if site.show_downloads %}
-        <ul class="downloads">
-          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
-        </ul>
-        {% endif %}
-      </header>
-      <section>
-
-      {{ content }}
-
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-      </footer>
-    </div>
-  </body>
+                {% if site.show_downloads %}
+                    <ul class="downloads">
+                      <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
+                      <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
+                      <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+                    </ul>
+                {% endif %}
+                <h3 class="masthead-title">
+                    <a href="/" title="Home">{{ site.title }}</a>
+                    {% for page in site.pages_list %}
+                    &nbsp;&nbsp;&nbsp;
+                        <small><a href="{{ page[1]  }}">{{ page[0] }}</a></small>
+                    {% endfor %}
+                </h3>
+            </header>
+            <section>
+                {{ content }}
+            </section>
+            <footer>
+                <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+            </footer>
+        </div>
+    </body>
 </html>
