--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,14 +1,15 @@
 ---
 layout: default
 ---
+<div class="post">
 
-<small>{{ page.date | date: "%-d %B %Y" }}</small>
-<h1>{{ page.title }}</h1>
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title }}</h1>
+    <p class="post-meta">{{ page.date | date: "%B %-d, %Y — %H:%M" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+  </header>
 
-<p class="view">by {{ page.author | default: site.author }}</p>
+  <article class="post-content">
+    {{ content }}
+  </article>
 
-{{content}}
-
-{% if page.tags %}
-  <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
-{% endif %}
+</div>
