--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,22 +1,18 @@
 <header class="site-header">
-
-  <div class="wrapper">
-
-    <nav class="site-nav">
-
-      <div class="trigger">
-        <!-- {{ site.title }} instead of blog -->
-        <a class="page-link" href="{{ site.baseurl }}/">blog</a>
-
-        {% for page in site.pages %}
-          {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          {% endif %}
-        {% endfor %}
-
-      </div>
-    </nav>
-
-  </div>
-
+    <div class="wrapper">
+        <nav class="site-nav">
+            <p class="trigger float-u-left">
+                <a href="{{site.baseurl}}/">Home</a>
+            </p>
+            <p class="trigger float-u-right">
+                <!-- {{ site.title }} instead of blog -->
+                <a class="page-link" href="{{ site.baseurl }}/">home</a>
+                {% for page in site.pages %}
+                    {% if page.title %}
+                        <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+                    {% endif %}
+                {% endfor %}
+            </p>
+        </nav>
+    </div>
 </header>
