--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -25,19 +25,16 @@ color: $theme-color;
     }
 }
 .site-nav {
-float: right;
-line-height: $nav-height;
-.page-link{
-line-height: $base-line-height;
+/**float: right;*/
+    line-height: $nav-height;
+    .page-link{
+        line-height: $base-line-height;
         // Gaps between nav items, but not on the first one
-&:not(:first-child) {
-margin-left: 10px;
+        &:not(:first-child) {
+            margin-left: 10px;
         }
     }
 @include media-query($on-palm) {
-position: fixed;
-top: 0px;
-right: 10px;
 text-align: right;
 &:hover .trigger {
 display: block;
