--- a/_sass/jmsweb.scss
+++ b/_sass/jmsweb.scss
@@ -16,5 +16,10 @@ article {
     float: left;
 }
 .float-u-right {
-	float: right;
+    float: right;
+}
+.home-u-icon {
+    width: 2em;
+    height: 2em;
+    vertical-align: middle;
 }
