--- a/_sass/jmsweb.scss
+++ b/_sass/jmsweb.scss
@@ -23,3 +23,8 @@ article {
     height: 2em;
     vertical-align: middle;
 }
+.portfolio img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
