--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,9 @@
     <div class="page-content">
       <div class="wrapper">
         {{ content }}
+        {% if page.comments %}
+            {% include disqus.html %}
+        {% endif %}
       </div>
     </div>
 
