--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,8 +6,9 @@
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
 
-    <link rel="stylesheet" href="{{ "/assets/css/style.css"}} ">
+    <link rel="stylesheet" href="{{ '/assets/css/style.css'}} ">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    {% if page.jquery %}<script type="text/javascript" src="{{site.baseurl}}/assets/js/jquery-3.4.1.min.js"></script>{% endif %}
 </head>
