--- a/_sass/jmsweb.scss
+++ b/_sass/jmsweb.scss
@@ -29,8 +29,11 @@ article {
     height: 2em;
     vertical-align: middle;
 }
-.portfolio img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
+.portfolio {
+    border: 1px solid black;
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
 }
