--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="site-footer">
     <div class="wrapper">
         <p class="float-u-left">
-            Built with <a href="http://jekyllrb.com" target="_blank">Jekyll</a>
+            Built with <a href="https://jekyllrb.com" target="_blank">Jekyll</a>
         </p>
         <p class="float-u-right">
              &#169; 2019 <a href="{{site.baseurl}}/">jmsweb</a>
